--- a/local.yml
+++ b/local.yml
@@ -10,10 +10,10 @@ services:
             - .:/app
             - static_volume:/app/staticfiles
             - media_volume:/app/mediafiles
-        ports:
-            - "8000:8000"
-        # expose:
-        #     - "8000"
+        # ports:
+        #     - "8000:8000"
+        expose:
+            - "8000"
         env_file:
             - ./.envs/.local/.django
             - ./.envs/.local/.postgres
@@ -48,20 +48,20 @@ services:
         networks:
             - dsgaff-api-live
 
-    # nginx:
-    #     restart: always
-    #     depends_on:
-    #         - api
-    #     volumes:
-    #         - static_volume:/app/staticfiles
-    #         - media_volume:/app/mediafiles
-    #     build:
-    #         context: ./docker/local/nginx
-    #         dockerfile: Dockerfile
-    #     ports:
-    #         - "8080:80"
-    #     networks:
-    #         - dsgaff-api-live          
+    nginx:
+        restart: always
+        depends_on:
+            - api
+        volumes:
+            - static_volume:/app/staticfiles
+            - media_volume:/app/mediafiles
+        build:
+            context: ./docker/local/nginx
+            dockerfile: Dockerfile
+        ports:
+            - "8080:80"
+        networks:
+            - dsgaff-api-live          
 
 
 networks:
