--- a/production.yml
+++ b/production.yml
@@ -14,10 +14,12 @@ services:
         #     - redis
         networks:
             - reverseproxy-nw
-    # client:
-    #     build:
-    #         context: ./client
-    #         dockerfile: ./docker/local/Dockerfile            
+    client:
+        build:
+            context: ./client
+            dockerfile: ./docker/local/Dockerfile
+        networks:
+            - reverseproxy-nw
 
     # redis:
     #     image: redis:6-alpine
